# pango

./: Makefile  README.md
api/: .env.example  .gitignore  Dockerfile  README.md  Untitled.ipynb  docker-compose-2G.yaml  docker-compose-4G-kibana.yaml  docker-compose-4G.yaml  log.docker.ini  log.ini  log.local.ini  main-prod.py  main.py  playground.ipynb  pyproject.toml  requirements.txt
api/docs/: query_playground.txt
api/src/: app.py  utils.py
api/src/config/: es.py  settings.py
api/src/core/: exceptions.py
api/src/graphql/: annotation_schema.py  graphql_context.py
api/src/middleware/: version_manager.py
api/src/models/: annotation_model.py  base_model.py  evidence_model.py  gene_model.py  term_model.py
api/src/resolvers/: annotation_resolver.py  annotation_stats_resolver.py  autocomplete_resolver.py  gene_stats_resolver.py  term_resolver.py
api/src/schemas/: annotation_schema.py  term_schema.py
api/tests/: README.md  conftest.py  test_basic_graphql.py  test_graphql_api.py  test_graphql_resolvers.py
data_conversion/: Makefile  README.md  annotate_is_goslim_json_ontology.py  export_annotations.py  gene_info_from_gafs.py  gene_info_taxon_lookup.py  iba_exp_refs_to_json.py  produce_functionome_release_gaf.py  requirements.txt  test.py
docs/: logos.pptx
insights/: .gitignore
loader/: .env-example  README.md  docker-compose-prod.yml  docker-compose.yml  out.json  playground.ipynb  playground_2.ipynb  requirements.txt
site-angular/: .gitignore  README.md  angular.json  (+3 more)
site-angular-archived/: angular.json  package.json  tsconfig.json
(+523 files in other folders)
